--- a/E-commerce/index-2.html
+++ b/E-commerce/index-2.html
@@ -1502,7 +1502,7 @@ body {
     </script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
        </script>    
-       <script src="./index.js"></script>
+       <script src="./assests/index.js"></script>
 </body>
 
 </html>
